--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,14 @@
 
 
 
-body, Providers{
-  background-color: #FFFFFF;
+body{
+  background-color: #fff;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   font-family: "DM Sans", sans-serif;  
 }
+
