--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,8 @@
 
 
 
-
-
-
 body{
-  background-color: #fff;
+  background: #fff;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -18,3 +15,23 @@ body{
   font-family: "DM Sans", sans-serif;  
 }
 
+
+#hobbies {
+  background: linear-gradient(45deg, #F3E7E9, #E3EEFF);
+  background-size: 400% 400%;
+  animation: GradientBackground 1s ease infinite;
+}
+
+@keyframes GradientBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+};
