--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,29 @@ body{
 
 
 
+.gradient-text {
+  background: linear-gradient(45deg, #FFD700, #FF1493, #00BFFF, #1ED760);
+  background-size: 400% 400%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: gradientAnimation 10s ease infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.hovered {
+  transform: scale(1.1); 
+  transition: transform 0.3s ease; 
+}
+
+
