add scrolling anim

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,4 +42,17 @@ body{
   transition: transform 0.3s ease; 
 }
 
+/* global.css */
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100% ); /* Adjust as per your logo size */
+  }
+}
+
+
+
 
